# retro_typein_tools

./: .gitignore  LICENSE.md  README.md  README.rst  conftest.py  pyproject.toml  retrotype_cli.py  setup.cfg  setup.py
check_and_convert/: check_and_convert.py
check_and_convert/sample_ahoy_files/: codes_sample2.ahoy  gz_sample.ahoy  repellent_fixed.ahoy
check_and_convert/tests/: check_and_convert_test.py  test_infile.txt
debug_tokenize/tests/: conftest.py  debug_tokenize_test.py
retrotype/: retrotype.py
src/debug_tokenize/: char_maps.py  debug_tokenize.py  debug_tokenize_version1.py  retrotype.py
src/retrotype/: __init__.py  char_maps.py  retrotype.py  retrotype_cli.py
tests/: debug_tokenize_test.py  retrotype_cli_test.py  retrotype_test.py  trial_infile.txt
typein_tokenizer/: char_maps.py  code_test2.bas  code_test2.prg  conftest.py  gz_test.ahoy  gz_test.bas  lawnjob.ahoy  lawnjob.bas  lawnjob.prg  test.ahoy  test.bas  test.prg  tokenizer.py
typein_tokenizer/sample_ahoy_files/: 10_line.ahoy  codes_sample1.ahoy  cursor_down.ahoy  g_sample.ahoy  gz_sample.ahoy  gz_sample.bas  gz_sample.prg  lawnjob.bas  print_sample.ahoy
typein_tokenizer/tests/: tokenizer_test.py
typeintokenizer/: tokenizer.py
typeintokenizer/tests/: tokenizer_test.py
