# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retro-typein-tools"
version = "0.2.4"
description = "Debuging and conversion tool for 1980s magazine type-in programs"
readme = "README.md"
authors = [{ name = "Michael Buhidar", email = "mbuhidar@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["commodore64", "vic20", "commodore", "atari", "compute", "ahoy",
            "run", "magazine", "c64"]
dependencies = []
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["flake8", "pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[project.urls]
Homepage = "https://github.com/mbuhidar/retro_typein_tools"

[project.scripts]
retrotype_cli = "retrotype.retrotype_cli:command_line_runner"
